@@ -3,6 +3,8 @@ ufw (0.22) UNRELEASED; urgency=low
   * fix confusing output of 'app update' command (LP: #261932)
   * only reload during 'app update' if the profile name is used in
     the current ruleset (LP: #261323)
+  * don't reload user rules if not enabled (LP: #262451)
+  * don't traceback if /proc not mounted (LP: #268084)
 
  -- Jamie Strandboge <jamie@ubuntu.com>  Wed, 27 Aug 2008 11:51:14 -0500
 
